--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Supabase for backend
+  supabase_flutter: ^2.7.0
+  
+  # Navigation and routing
+  go_router: ^14.6.1
+  
+  # State management
+  flutter_riverpod: ^2.6.1
+  
+  # HTTP requests
+  http: ^1.2.2
+  
+  # UI Components
+  flutter_staggered_grid_view: ^0.7.0
+  cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
+  
+  # Local storage
+  shared_preferences: ^2.3.2
+  
+  # File handling
+  file_picker: ^8.1.2
+  
+  # Utils
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +43,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  # Assets
+  assets:
+    - assets/images/
