--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: kitakita_ecom
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,41 +9,44 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # Supabase for backend
-  supabase_flutter: ^2.7.0
-  
+  supabase_flutter: ^2.9.1
+
   # Navigation and routing
-  go_router: ^14.6.1
-  
+  go_router: ^16.1.0
+
   # State management
   flutter_riverpod: ^2.6.1
-  
+
   # HTTP requests
   http: ^1.2.2
-  
+
   # UI Components
   flutter_staggered_grid_view: ^0.7.0
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
-  
+
   # Local storage
   shared_preferences: ^2.3.2
-  
+
   # File handling
-  file_picker: ^8.1.2
-  
+  file_picker: ^10.3.1
+
   # Utils
   uuid: ^4.5.1
+  flutter_svg: ^2.0.12
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
-  
+
   # Assets
   assets:
     - assets/images/
+    - assets/icons/
