--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^2.0.12
   logger: ^2.4.0
 
+  flutter_dotenv: ^6.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -50,3 +52,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - .env
